# oni_vicon_common

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/oni_vicon_common/: action_macros.hpp  calibration_writer.hpp  exceptions.hpp  global_calibration.hpp  local_calibration.hpp
src/depth_sensor_vicon_calibration/: CMakeLists.txt  package.xml
src/depth_sensor_vicon_calibration/action/: CompleteGlobalCalibration.action  CompleteLocalCalibration.action  ContinueGlobalCalibration.action  ContinueLocalCalibration.action  GlobalCalibration.action  LocalCalibration.action  TestCalibration.action
src/depth_sensor_vicon_calibration/config/: calibration.yaml  calibration_tracker.config  calibration_tracker.yaml
src/depth_sensor_vicon_calibration/include/depth_sensor_vicon_calibration/: calibration.hpp  depth_sensor_vicon_calibration.hpp  depth_sensor_vicon_calibration.hpp.orig  transform.hpp
src/depth_sensor_vicon_calibration/include/depth_sensor_vicon_calibration/distribution/: articulated_process_model.hpp  brownian_process_model.hpp  composed_distribution.hpp  damped_brownian_motion.hpp  depth_measurement_model.hpp  depth_measurement_model2.hpp  distribution.hpp  gaussian_distribution.hpp  gaussian_process_model.hpp  integrated_damped_brownian_motion.hpp  measurement_model.hpp  stationary_process_model.hpp
src/depth_sensor_vicon_calibration/include/depth_sensor_vicon_calibration/object_models/: rigid_object_model.hpp  triangle_object_model.hpp
src/depth_sensor_vicon_calibration/include/depth_sensor_vicon_calibration/object_models/observation_models/: gaussian_observation_model.hpp  observation_model.hpp
src/depth_sensor_vicon_calibration/include/depth_sensor_vicon_calibration/process_models/: arm_process_model.hpp  isotropic_gaussian_process_model.hpp  large_trimmers_arm_process_model.hpp  large_trimmers_gaussian_process_model.hpp  occlusion_process_model.hpp  planar_gaussian_process_model.hpp  process_model.hpp
src/depth_sensor_vicon_calibration/launch/: calibration_tracker.launch
src/depth_sensor_vicon_calibration/object/: marker-positions.txt
src/depth_sensor_vicon_calibration/object/maglite/: desc.yaml  maglite_down.blend  maglite_down.pcd  maglite_lying.blend  maglite_lying.pcd  maglite_up.blend  maglite_up.pcd
src/depth_sensor_vicon_calibration/object/maglite/fusion_training_data/maglite_lying/: template.ppas_store
src/depth_sensor_vicon_calibration/src/: depth_sensor_vicon_calibration.cpp
src/depth_sensor_vicon_calibration/src/depth_sensor_vicon_calibration/: calibration.cpp  transform.cpp
src/depth_sensor_vicon_calibration/src/object_models/: large_trimmers_model.cpp  rigid_object_model.cpp  triangle_object_model.cpp
src/depth_sensor_vicon_calibration/src/observation_models/: gaussian_observation_model.cpp  observation_model.cpp
src/depth_sensor_vicon_calibration/src/process_models/: arm_process_model.cpp  isotropic_gaussian_process_model.cpp  large_trimmers_arm_process_model.cpp  large_trimmers_gaussian_process_model.cpp  occlusion_process_model.cpp  planar_gaussian_process_model.cpp  process_model.cpp
src/depth_sensor_vicon_calibration/src/spkf/: occ_test.cpp
src/depth_sensor_vicon_calibration/src/spkf/ukf/: factorized_unscented_kalman_filter.cpp  p_unscented_kalman_filter.cpp  s_unscented_kalman_filter.cpp  unscented_kalman_filter_base.cpp
src/depth_sensor_vicon_calibration/src/tools/: cloud_visualizer.cpp  depth_image_publisher.cpp  image_visualizer.cpp  object_file_reader.cpp  object_rasterizer.cpp  ros_interface.cpp  shader.cpp
src/depth_sensor_vicon_calibration/srv/: CompleteGlobalCalibration.srv  CompleteLocalCalibration.srv  ContinueGlobalCalibration.srv  ContinueTestCalibration.srv  LoadGlobalCalibration.srv  LoadLocalCalibration.srv  SaveGobalCalibration.srv  SaveLocalCalibration.srv
src/oni_vicon_common/: CMakeLists.txt  calibration_writer.cpp  global_calibration.cpp  local_calibration.cpp  package.xml  type_conversion.cpp
src/oni_vicon_common/include/oni_vicon_common/: calibration_reader.hpp  calibration_writer.hpp  local_calibration.hpp  transformer.hpp  type_conversion.hpp  types.hpp
src/oni_vicon_common/src/oni_vicon_common/: calibration_reader.cpp  calibration_writer.cpp  camera_intrinsics.cpp  global_calibration.cpp  local_calibration.cpp  local_calibration.cpp.autosave  transformer.cpp  type_conversion.cpp
src/oni_vicon_player/: CMakeLists.txt  package.xml
src/oni_vicon_player/action/: JumpTo.action  Open.action  Play.action
src/oni_vicon_player/include/oni_vicon_player/: exceptions.hpp  oni_player.hpp  oni_vicon_playback_server.hpp  oni_vicon_player.hpp  vicon_player.hpp
src/oni_vicon_player/launch/: arm_rgbd_frames.launch  oni_vicon_player.launch
src/oni_vicon_player/src/oni_vicon_player/: oni_player.cpp  oni_vicon_playback_server.cpp  oni_vicon_player.cpp  oni_vicon_player_node.cpp  vicon_player.cpp
src/oni_vicon_player/srv/: Pause.srv  SeekFrame.srv  SetPlaybackSpeed.srv
src/ros_action_helper/: CMakeLists.txt  package.xml
src/ros_action_helper/include/ros_action_helper/: action_helper.hpp
