<?xml version="1.0"?>
<package>
  <name>depth_sensor_vicon_calibration</name>
  <version>0.0.0</version>
  <description>The depth_sensor_vicon_calibration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="issac_local@todo.todo">issac_local</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/depth_sensor_vicon_calibration</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>simple_object_tracker</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>oni_vicon_common</build_depend>

  <run_depend>message_runtime</run_depend>    
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>interactive_markers</run_depend> 
  <run_depend>simple_object_tracker</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>oni_vicon_common</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
